feature: include style

--- a/cadastro.html
+++ b/cadastro.html
@@ -23,8 +23,8 @@
                 </div>
             </nav>
         </header>
-        <main class="cadastro-container container">
-            <form action="">
+        <main class="cadastro-container container-fluid">
+            <form method="POST" action="mailto:cherestek@gmail.com">
                 <div class="col-lg-10">
                     <h1>Efetue seu cadastro</h1>
                     <div class="row mb-2">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
-                <button class="btn btn-primary" type="submit">cadastrar</button>
+                <button class="btn btn-secondary" type="submit">Cadastrar</button>
                 </div>
             </form>
         </main>
