--- a/receitas.html
+++ b/receitas.html
@@ -26,7 +26,7 @@
         <main>
             <section class="recipes-container">
                 <div>
-                    <h2>Arroz de Couve-Flor</h2>
+                    <h2 class="text-center">Arroz de Couve-Flor</h2>
                     <img
                         src="./assets/images/arroz-couve-flor.png"
                         alt="arroz couve flor"
@@ -37,6 +37,7 @@
                         <li>Cebola Média</li>
                         <li>Azeite</li>
                     </ul>
+                    <hr>
                     <p>
                         Deixe a couve flor picada. Adicione os ingredientes e
                         refogue bem. Adicione sal, tampe a panela e deixe
@@ -56,6 +57,7 @@
                         <li>Chocolate em pó</li>
                         <li>Ovos</li>
                     </ul>
+                    <hr>
                     <p>
                         Bata o açucar, as gemas e o café. Adicione farinha e
                         chocolate e mexa bem. Bata as claras e junte à mistura.
@@ -74,6 +76,7 @@
                         <li>Morango</li>
                         <li>Chocolate granulado</li>
                     </ul>
+                    <hr>
                     <p>
                         Junte o leite condensado, chocolate em pó e manteiga.
                         Aqueça no fogo baixo. Envolva os morangos e passe no
@@ -92,6 +95,7 @@
                         <li>Cebola Média</li>
                         <li>Azeite</li>
                     </ul>
+                    <hr>
                     <p>
                         Deixe a couve flor picada. Adicione os ingredientes e
                         refogue bem. Adicione sal, tampe a panela e deixe
@@ -99,7 +103,7 @@
                     </p>
                 </div>
                 <div>
-                    <h2>Arroz de Couve-Flor</h2>
+                    <h2 class="text-center">Arroz de Couve-Flor</h2>
                     <img
                         src="./assets/images/arroz-couve-flor.png"
                         alt="arroz couve flor"
@@ -110,6 +114,7 @@
                         <li>Cebola Média</li>
                         <li>Azeite</li>
                     </ul>
+                    <hr>
                     <p>
                         Deixe a couve flor picada. Adicione os ingredientes e
                         refogue bem. Adicione sal, tampe a panela e deixe
