--- a/receitas.html
+++ b/receitas.html
@@ -25,101 +25,119 @@
         </header>
         <main>
             <section class="recipes-container">
-                <div>
-                    <h2 class="text-center">Arroz de Couve-Flor</h2>
+                <div class="card">
                     <img
+                        class="card-img-top"
                         src="./assets/images/arroz-couve-flor.png"
                         alt="arroz couve flor"
                     />
-                    <ul>
-                        <li>Arroz</li>
-                        <li>Couve-Flor</li>
-                        <li>Cebola Média</li>
-                        <li>Azeite</li>
-                    </ul>
-                    <hr>
-                    <p>
-                        Deixe a couve flor picada. Adicione os ingredientes e
-                        refogue bem. Adicione sal, tampe a panela e deixe
-                        cozinhar.
-                    </p>
+                    <div class="card-body">
+                        <h2 class="card-title">Arroz de Couve-Flor</h2>
+                        <div class="card-text">
+                            <ul>
+                                <li>Arroz</li>
+                                <li>Couve-Flor</li>
+                                <li>Cebola Média</li>
+                                <li>Azeite</li>
+                            </ul>
+                            <hr />
+                            <p>
+                                Deixe a couve flor picada. Adicione os
+                                ingredientes e refogue bem. Adicione sal, tampe
+                                a panela e deixe cozinhar.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="text-center">Bolo de café</h2>
+                <div class="card">
                     <img
+                        class="card-img-top"
                         src="./assets/images/bolo-de-cafe.png"
                         alt="bolo de cafe"
                     />
-                    <ul>
-                        <li>Farinha de trigo</li>
-                        <li>Açucar</li>
-                        <li>Café coado</li>
-                        <li>Chocolate em pó</li>
-                        <li>Ovos</li>
-                    </ul>
-                    <hr>
-                    <p>
-                        Bata o açucar, as gemas e o café. Adicione farinha e
-                        chocolate e mexa bem. Bata as claras e junte à mistura.
-                    </p>
+                    <h2 class="card-title">Bolo de café</h2>
+                    <div class="card-body">
+                        <ul>
+                            <li>Farinha de trigo</li>
+                            <li>Açucar</li>
+                            <li>Café coado</li>
+                            <li>Chocolate em pó</li>
+                            <li>Ovos</li>
+                        </ul>
+                        <hr />
+                        <p>
+                            Bata o açucar, as gemas e o café. Adicione farinha e
+                            chocolate e mexa bem. Bata as claras e junte à
+                            mistura.
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="text-center">Coxinha de Brigadeiro</h2>
+                <div class="card">
                     <img
+                        class="card-img-top"
                         src="./assets/images/coxinha-de-brigadeiro.png"
                         alt="coxinha de brigadeiro"
                     />
-                    <ul>
-                        <li>Leite condensado</li>
-                        <li>Chocolate em pó</li>
-                        <li>Manteiga</li>
-                        <li>Morango</li>
-                        <li>Chocolate granulado</li>
-                    </ul>
-                    <hr>
-                    <p>
-                        Junte o leite condensado, chocolate em pó e manteiga.
-                        Aqueça no fogo baixo. Envolva os morangos e passe no
-                        granulado.
-                    </p>
+                    <h2 class="card-title">Coxinha de Brigadeiro</h2>
+                    <div class="card-body">
+                        <ul>
+                            <li>Leite condensado</li>
+                            <li>Chocolate em pó</li>
+                            <li>Manteiga</li>
+                            <li>Morango</li>
+                            <li>Chocolate granulado</li>
+                        </ul>
+                        <hr />
+                        <p>
+                            Junte o leite condensado, chocolate em pó e
+                            manteiga. Aqueça no fogo baixo. Envolva os morangos
+                            e passe no granulado.
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="text-center">Arroz de Couve-Flor</h2>
+                <div class="card">
                     <img
+                        class="card-img-top"
                         src="./assets/images/arroz-couve-flor.png"
                         alt="arroz couve flor"
                     />
-                    <ul>
-                        <li>Arroz</li>
-                        <li>Couve-Flor</li>
-                        <li>Cebola Média</li>
-                        <li>Azeite</li>
-                    </ul>
-                    <hr>
-                    <p>
-                        Deixe a couve flor picada. Adicione os ingredientes e
-                        refogue bem. Adicione sal, tampe a panela e deixe
-                        cozinhar.
-                    </p>
+                    <h2 class="card-title">Arroz de Couve-Flor</h2>
+                    <div class="card-body">
+                        <ul>
+                            <li>Arroz</li>
+                            <li>Couve-Flor</li>
+                            <li>Cebola Média</li>
+                            <li>Azeite</li>
+                        </ul>
+                        <hr />
+                        <p>
+                            Deixe a couve flor picada. Adicione os ingredientes
+                            e refogue bem. Adicione sal, tampe a panela e deixe
+                            cozinhar.
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="text-center">Arroz de Couve-Flor</h2>
+                <div class="card">
                     <img
+                        class="card-img-top"
                         src="./assets/images/arroz-couve-flor.png"
                         alt="arroz couve flor"
                     />
-                    <ul>
-                        <li>Arroz</li>
-                        <li>Couve-Flor</li>
-                        <li>Cebola Média</li>
-                        <li>Azeite</li>
-                    </ul>
-                    <hr>
-                    <p>
-                        Deixe a couve flor picada. Adicione os ingredientes e
-                        refogue bem. Adicione sal, tampe a panela e deixe
-                        cozinhar.
-                    </p>
+                    <h2 class="card-title">Arroz de Couve-Flor</h2>
+                    <div class="card-body">
+                        <ul>
+                            <li>Arroz</li>
+                            <li>Couve-Flor</li>
+                            <li>Cebola Média</li>
+                            <li>Azeite</li>
+                        </ul>
+                        <hr />
+                        <p>
+                            Deixe a couve flor picada. Adicione os ingredientes
+                            e refogue bem. Adicione sal, tampe a panela e deixe
+                            cozinhar.
+                        </p>
+                    </div>
                 </div>
             </section>
         </main>
